@@ -58,8 +58,6 @@
 
 #include "des_locl.h"
 
-OPENSSL_EXTERN int des_check_key;
-
 void des_string_to_key(const char *str, des_cblock *key)
 	{
 	des_key_schedule ks;
@@ -88,10 +86,7 @@ void des_string_to_key(const char *str, des_cblock *key)
 		}
 #endif
 	des_set_odd_parity(key);
-	i=des_check_key;
-	des_check_key=0;
-	des_set_key(key,ks);
-	des_check_key=i;
+	des_set_key_unchecked(key,ks);
 	des_cbc_cksum((unsigned char*)str,key,length,ks,key);
 	memset(ks,0,sizeof(ks));
 	des_set_odd_parity(key);
@@ -150,13 +145,10 @@ void des_string_to_2keys(const char *str, des_cblock *key1, des_cblock *key2)
 #endif
 	des_set_odd_parity(key1);
 	des_set_odd_parity(key2);
-	i=des_check_key;
-	des_check_key=0;
-	des_set_key(key1,ks);
+	des_set_key_unchecked(key1,ks);
 	des_cbc_cksum((unsigned char*)str,key1,length,ks,key1);
-	des_set_key(key2,ks);
+	des_set_key_unchecked(key2,ks);
 	des_cbc_cksum((unsigned char*)str,key2,length,ks,key2);
-	des_check_key=i;
 	memset(ks,0,sizeof(ks));
 	des_set_odd_parity(key1);
 	des_set_odd_parity(key2);
