@@ -115,8 +115,8 @@ static void des_cbc_ede_init_key(EVP_CIPHER_CTX *ctx, unsigned char *key,
 
 	if (deskey != NULL)
 		{
-		des_set_key(&deskey[0],ctx->c.des_ede.ks1);
-		des_set_key(&deskey[1],ctx->c.des_ede.ks2);
+		des_set_key_unchecked(&deskey[0],ctx->c.des_ede.ks1);
+		des_set_key_unchecked(&deskey[1],ctx->c.des_ede.ks2);
 		memcpy( (char *)ctx->c.des_ede.ks3,
 			(char *)ctx->c.des_ede.ks1,
 			sizeof(ctx->c.des_ede.ks1));
@@ -134,9 +134,9 @@ static void des_cbc_ede3_init_key(EVP_CIPHER_CTX *ctx, unsigned char *key,
 
 	if (deskey != NULL)
 		{
-		des_set_key(&deskey[0],ctx->c.des_ede.ks1);
-		des_set_key(&deskey[1],ctx->c.des_ede.ks2);
-		des_set_key(&deskey[2],ctx->c.des_ede.ks3);
+		des_set_key_unchecked(&deskey[0],ctx->c.des_ede.ks1);
+		des_set_key_unchecked(&deskey[1],ctx->c.des_ede.ks2);
+		des_set_key_unchecked(&deskey[2],ctx->c.des_ede.ks3);
 		}
 	}
 
