@@ -135,11 +135,11 @@ static void mdc2_body(MDC2_CTX *c, unsigned char *in, unsigned int len)
 		c->hh[0]=(c->hh[0]&0x9f)|0x20;
 
 		des_set_odd_parity(&c->h);
-		des_set_key(&c->h,k);
+		des_set_key_unchecked(&c->h,k);
 		des_encrypt(d,k,1);
 
 		des_set_odd_parity(&c->hh);
-		des_set_key(&c->hh,k);
+		des_set_key_unchecked(&c->hh,k);
 		des_encrypt(dd,k,1);
 
 		ttin0=tin0^dd[0];
